# OpenLap

./: README.md  app_config.py  pyproject.toml  session_scanner.py  vbox_data.py  webview_api.py  xrk_to_csv_libxrk.py
frontend/js/pages/: settings.js
