[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openlap"
dynamic = ["version"]
description = "Free, open-source motorsport telemetry overlay software for RaceBox, AIM MyChron, MoTeC, and GPX data. Renders professional gauge overlays on racing video."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "Pillow>=10.0",
    "opencv-python>=4.8",
    "pandas>=2.0",
    "pywebview>=5.0",
    # AIM XRK reader. Windows has the option of the AIM-distributed MatLabXRK
    # DLL (downloaded at runtime from aim-sportline.com); macOS/Linux must use
    # libxrk because AIM does not ship a native binary for those platforms.
    "libxrk>=0.10; sys_platform != 'win32'",
]

[project.optional-dependencies]
racebox-download = [
    "requests>=2.31",
    "playwright>=1.40",
]
package = [
    "pyinstaller>=6.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
openlap = "main:main"

[tool.setuptools.dynamic]
version = {attr = "_version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["styles*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

# Frontend JS tests: npm run test:run  (Vitest + jsdom, see vitest.config.js)
